--- a/src/influxdblpexporter/version.cpp.in
+++ b/src/influxdblpexporter/version.cpp.in
@@ -2,7 +2,11 @@
 
 using namespace std::literals;
 
+namespace crosscode::influxdblpexporter {
+
 std::string_view version() {
 constexpr std::string_view version_value = "@CMAKE_PROJECT_VERSION@"sv;
 return version_value;
+}
+
 }
